--- a/challenges/wildtrip/views/card.ejs
+++ b/challenges/wildtrip/views/card.ejs
@@ -48,14 +48,16 @@
         >
           <img src="<%= travel[cityIndex].image %>" class="img-medium" />
           <div class="mt-3">
-            <a href="/trips" class="btn btn-danger">Delete</a>
+            <a href="/delete?index=<%= cityIndex %>" class="btn btn-danger"
+              >Delete</a
+            >
           </div>
         </div>
         <div class="d-flex flex-column p-3">
           <h2><%= travel[cityIndex].name %></h2>
           <p class="text-white"><%= travel[cityIndex].description %></p>
           <div class="mt-3">
-            <a href="/trips" class="btn btn-danger">Retour</a>
+            <a href="/trips" class="btn btn-primary">Retour</a>
           </div>
         </div>
       </div>
