bikeshop project update

--- a/projects/bikeshopbackend/views/index.ejs
+++ b/projects/bikeshopbackend/views/index.ejs
@@ -23,8 +23,8 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-light bg-dark">
-      <a class="navbar" href="/">
+    <nav class="navbar navbar-light bg-dark p-2">
+      <a class="navbar-brand text-white" href="/">
         <img
           src="images/bike-logo.svg"
           width="50"
