--- a/projects/dashboard/views/orders-list.ejs
+++ b/projects/dashboard/views/orders-list.ejs
@@ -31,89 +31,11 @@
   </head>
 
   <body id="page-top">
-    <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-      <a class="navbar-brand mr-1" href="/">Black Board</a>
-
-      <button
-        class="btn btn-link btn-sm text-white order-1 order-sm-0"
-        id="sidebarToggle"
-        href="#"
-      >
-        <i class="fas fa-bars"></i>
-      </button>
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/tasks-page">
-            <i class="fas fa-bell fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/messages-page">
-            <i class="fas fa-envelope fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="userDropdown"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            <i class="fas fa-user-circle fa-fw"></i>
-          </a>
-          <div
-            class="dropdown-menu dropdown-menu-right"
-            aria-labelledby="userDropdown"
-          >
-            <h6 class="dropdown-header">Hi Mike Doe</h6>
-          </div>
-        </li>
-      </ul>
-    </nav>
+    <%- include("header") %>
 
     <div id="wrapper">
       <!-- Sidebar -->
-      <ul class="sidebar navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span>
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/users-page">
-            <i class="fas fa-fw fa-users"></i>
-            <span>Clients</span></a
-          >
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/catalog-page">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Catalogue Produits</span></a
-          >
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/orders-list-page">
-            <i class="fas fa-shopping-basket"></i>
-            <span>Commandes</span></a
-          >
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/charts">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a
-          >
-        </li>
-      </ul>
+      <%- include("sidebar") %>
 
       <div id="content-wrapper">
         <div class="container-fluid">
@@ -155,7 +77,7 @@
                     for (let order of orders) {
                       if (order.status_payment === "validated") {
                         paymentStatusColor = "status-success";
-                        paymentDate = order.date_payment;
+                        paymentDate = formatDate(order.date_payment);
                       }
                       else if (order.status_payment === "waiting") {
                         paymentStatusColor = "status-warning";
@@ -168,14 +90,14 @@
 
                       if (order.status_shipment === true) {
                         shipmentStatusColor = "status-success";
-                        shipmentDate = order.date_shipment;
+                        shipmentDate = formatDate(order.date_shipment);
                       } else {
                         shipmentStatusColor = "status-warning"
                         shipmentDate = "-";
                       }
                     %>
                     <tr>
-                      <td><%= order.date_insert %></td>
+                      <td><%= formatDate(order.date_insert) %></td>
                       <td><%= order.total %>€</td>
                       <td><%= order.shipping_cost %>€</td>
                       <td class="<%= paymentStatusColor %>">
