--- a/projects/dashboard/views/charts.ejs
+++ b/projects/dashboard/views/charts.ejs
@@ -40,19 +40,19 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 col-md-4 mb-3 chart">
-              <img class="img-fluid" src="/images/chart1.jpg" />
+              <canvas id="usersPerGenderChart" data-female="<%= femaleCount %>" data-male="<%= maleCount %>"></canvas>
             </div>
 
             <div class="col-12 col-md-4 mb-3 chart">
-              <img class="img-fluid" src="/images/chart2.jpg" />
+              <canvas id="messagesStatusChart" data-read="<%= readCount %>" data-unread="<%= unreadCount %>"></canvas>
             </div>
 
             <div class="col-12 col-md-4 mb-3 chart">
-              <img class="img-fluid" src="/images/chart3.jpg" />
+              <canvas id="shippingStatusChart" data-shipped="<%= shippedOrderCount %>" data-notshipped="<%= notShippedOrderCount %>"></canvas>
             </div>
 
             <div class="col-12 col-md-4 mb-3 chart">
-              <img class="img-fluid" src="/images/chart4.jpg" />
+              <canvas id="revenuesChart" data-revenues="<%= JSON.stringify(revenues) %>"></canvas>
             </div>
           </div>
         </div>
@@ -83,5 +83,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="javascripts/sb-admin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js" integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="javascripts/dataviz.js"></script>
   </body>
 </html>
