--- a/projects/morningnews/reactapp/src/App.css
+++ b/projects/morningnews/reactapp/src/App.css
@@ -30,7 +30,7 @@ h4 {
   padding-bottom: 15px;
   border-radius: 5%;
   border-color: white;
-  background-color: rgba(63, 169, 255, 0.5);
+  background-color: #00253e;
   margin: 40px;
 }
 
